--- a/index.html
+++ b/index.html
@@ -5,29 +5,31 @@
   <style>
     body {
       font-family: system-ui, sans-serif;
-      max-width: 8.5in;   /* letter size width */
-      margin: 0in auto;
-      padding: 0;
+      max-width: 8.5in;
+      margin: 0 auto;
+      padding: 0.5in;
       line-height: 1.4;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+    td {
+      vertical-align: top;
+      padding: 0.3rem;
     }
     label {
       font-weight: bold;
       display: block;
-      margin-top: 0.5rem;
+      margin-bottom: 0.2rem;
     }
     input, textarea, select {
       width: 100%;
-      padding: 0.4rem;
+      padding: 0.3rem;
       font-size: 1rem;
-      margin-top: 0.15rem;
       box-sizing: border-box;
-      resize: none;            /* no drag resize */
+      resize: none;
     }
-    /* Field sizes */
-    #subject   { height: 3rem; }   /* one line */
-    #overview  { height: 6rem; }     /* ~2–3 lines */
-    #sequence  { height: 35rem; }    /* bulk area */
-    #materials { height: 7rem; }     /* medium area */
     button {
       margin-top: 1rem;
       padding: 0.6rem 1.2rem;
@@ -41,57 +43,57 @@
     button:hover { background: #1e40af; }
     @media print {
       button { display: none; }
-      input, textarea, select {
-        border: none;
-        resize: none;
-        overflow: visible;
-      }
-      label { margin-top: 0.25rem; }
-      body { margin: 0.5in; }
+      input, textarea, select { border: none; outline: none; }
+      body { margin: 0.4in; }
     }
-    /* Prevent fields from splitting across pages */
-    .field-block { page-break-inside: avoid; }
   </style>
 </head>
 <body>
 
-<div class="field-block">
-  <label for="student">Student Name</label>
-  <select id="student">
-    <option value="">-- Select a Student --</option>
-  </select>
-</div>
-
-<div class="field-block">
-  <label for="studentId">Student Application ID #</label>
-  <input type="text" id="studentId" readonly>
-</div>
-
-<div class="field-block">
-  <label for="subject">Subject</label>
-  <input type="text" id="subject" placeholder="e.g. Math">
-</div>
-
-<div class="field-block">
-  <label for="overview">Scope / Overview of Class</label>
-  <textarea id="overview" placeholder="Brief 2–3 line summary..."></textarea>
-</div>
-
-<div class="field-block">
-  <label for="sequence">Sequence / Method of Teaching / Lessons</label>
-  <textarea id="sequence" placeholder="Detailed lesson plan, steps, activities..."></textarea>
-</div>
-
-<div class="field-block">
-  <label for="materials">Materials Needed</label>
-  <textarea id="materials" placeholder="List resources, books, supplies..."></textarea>
-</div>
+<table>
+  <tr>
+    <td>
+      <label for="student">Student Name</label>
+      <select id="student">
+        <option value="">-- Select a Student --</option>
+      </select>
+    </td>
+    <td>
+      <label for="studentId">Student ID</label>
+      <input type="text" id="studentId" readonly>
+    </td>
+  </tr>
+  <tr>
+    <td colspan="2">
+      <label for="subject">Subject</label>
+      <input type="text" id="subject" placeholder="e.g. Math">
+    </td>
+  </tr>
+  <tr>
+    <td colspan="2">
+      <label for="overview">Scope / Overview</label>
+      <textarea id="overview" rows="3"></textarea>
+    </td>
+  </tr>
+  <tr>
+    <td colspan="2">
+      <label for="sequence">Lessons / Sequence</label>
+      <textarea id="sequence" rows="25"></textarea>
+    </td>
+  </tr>
+  <tr>
+    <td colspan="2">
+      <label for="materials">Materials Needed</label>
+      <textarea id="materials" rows="6"></textarea>
+    </td>
+  </tr>
+</table>
 
 <button onclick="window.print()">Print / Save to PDF</button>
 
 <script>
 async function loadStudents() {
-  const response = await fetch('students.csv'); // CSV in repo
+  const response = await fetch('students.csv');
   const text = await response.text();
   const rows = text.trim().split('\n').slice(1);
   const students = rows.map(r => {
