--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <style>
     body {
-      font-family: system-ui, sans-serif;
+      font-family: Garamond, serif;
       max-width: 8.5in;
       margin: 0 auto;
       padding: 0.5in;
